# catkin_ros

./: .gitignore  README.md
devel/: .catkin  .rosinstall  setup.sh
devel/etc/catkin/profile.d/: 05.catkin-test-results.sh
devel/include/ar_track_alvar/: ParamsConfig.h
devel/include/ar_track_alvar_msgs/: AlvarMarker.h  AlvarMarkers.h
devel/lib/ar_track_alvar/: createMarker  findMarkerBundles  findMarkerBundlesNoKinect  individualMarkers  individualMarkersNoKinect  trainMarkerBundle
devel/lib/pkgconfig/: ar_track_alvar.pc  ar_track_alvar_msgs.pc  sample_move_arm.pc
devel/lib/python2.7/dist-packages/ar_track_alvar/cfg/: ParamsConfig.py
devel/lib/python2.7/dist-packages/ar_track_alvar_msgs/msg/: _AlvarMarker.py  _AlvarMarkers.py
devel/lib/sample_move_arm/: move_arm
devel/share/ar_track_alvar/cmake/: ar_track_alvarConfig.cmake
devel/share/ar_track_alvar_msgs/cmake/: ar_track_alvar_msgs-msg-paths.cmake  ar_track_alvar_msgsConfig.cmake
devel/share/common-lisp/ros/ar_track_alvar_msgs/msg/: AlvarMarker.lisp  AlvarMarkers.lisp
devel/share/sample_move_arm/cmake/: sample_move_armConfig.cmake
src/: ros.sublime-project  ros.sublime-workspace
src/sample_move_arm/: CMakeLists.txt  package.xml  planposes.txt  rviz_config.rviz
src/sample_move_arm/bag/: 2015-10-15-00-29-14.bag  2015-10-15-00-29-36.bag  2015-10-15-00-30-29.bag  2015-10-15-00-32-56.bag  2015-10-15-05-48-42.bag  back loop.bag  demo1.bag  demo2.bag  demo3.bag  dshape.bag  good.bag  nowayinhell.bag  sent2015-10-15-06-21-16.bag  shobhit.bag  square.bag
src/sample_move_arm/bag/broken/: 2015-10-15-06-31-49.bag  broken.bag  broken2.bag
src/sample_move_arm/examples/: launch file to visualize.xml  subscribing.cpp  todo.txt
src/sample_move_arm/include/sample_move_arm/: dmp.h
src/sample_move_arm/launch/: bundles.xml  dmp.launch  indivbundle.xml  move_group_a2.launch  pr2_bundle.launch  pr2_indiv.launch
src/sample_move_arm/scripts/: bagger.py  constants.py  plot_plan.py  plot_poses.py  plot_transformed.py  pub_teststates.py  pub_times.py  pub_transformed.py  transformed_waypoints.py
src/sample_move_arm/src/: dmp.cpp  dmp.h  move_arm.cpp  plot_plan.cpp  recordedData.cpp
